--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-add/category-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-add/category-add.component.html
@@ -4,7 +4,7 @@
         </mat-form-field>
         <div class="form-group">
           <!--DONT FORGET TO PUT VALUES ON CLICK FUNCTION-->
-          <button mat-raised-button color="primary" (click)="addCategory(categoryName.value); onNoClick();showCategories()"
+          <button mat-raised-button color="primary" (click)="addCategory(categoryName.value); onNoClick()"
                   [disabled]="angForm.pristine || angForm.invalid || loading">
             Add Category
           </button>
