--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-get/category-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-get/category-get.component.html
@@ -2,6 +2,6 @@
   <mat-list-item><strong>Categories</strong><a (click)="openDialog()"><strong>+</strong></a></mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item *ngFor="let category of categories">{{category.name}}
-    <a (click)="deleteCategory(category.id)"><small>-</small></a>
+    <a (click)="deleteCategory(category.id)">-</a>
   </mat-list-item>
 </mat-list>
