--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
@@ -1,6 +1,7 @@
-<ul class="list-group">
-  <li class="list-group-item list-group-item list-group-item-dark"><strong>SubCategories</strong><a (click)="openDialog()"><strong>+</strong></a></li>
-  <li class="list-group-item list-group-item-light" *ngFor="let subcategory of subCategories">
-    <strong>{{subcategory.name}}</strong><a (click)="deleteSubCategory(subcategory.id)">-</a>
-  </li>
-</ul>
+<mat-list>
+  <mat-list-item><strong>SubCategories</strong><a (click)="openDialog()"><strong>+</strong></a></mat-list-item>
+  <mat-divider></mat-divider>
+  <mat-list-item *ngFor="let category of categories">{{subcategory.name}}
+    <a deleteSubCategory(subcategory.id)>-</a>
+  </mat-list-item>
+</mat-list>
