--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -33,10 +33,13 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef> Published </th>
-    <td mat-cell *matCellDef="let product">
-      <mat-checkbox class="example-margin" [(ngModel)]="product.publishedStatus"></mat-checkbox>
-      {{ product.publishedStatus }}
-    </td>
+    <div [formGroup]="angForm" novalidate>
+      <td mat-cell *matCellDef="let product">
+        <mat-checkbox class="example-margin" formControlName="publishedStatus" #publishedStatus (click)="editProduct(product.productID,publishedStatus.value)" ></mat-checkbox>
+        {{ product.publishedStatus }}
+      </td>
+    </div>
+
   </ng-container>
   <ng-container matColumnDef="Edit">
     <th mat-header-cell *matHeaderCellDef></th>
