--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -1,87 +1,55 @@
-<table mat-table [dataSource]="products" class="mat-elevation-z8">
+
+
+<table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let product">{{ product.productID }}</td>
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let product">{{ product.productID }}</td>
   </ng-container>
   <ng-container matColumnDef="Name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let product">{{product.productName}}</td>
   </ng-container>
   <ng-container matColumnDef="Category">
-    <th mat-header-cell *matHeaderCellDef> Category </th>
+    <th mat-header-cell *matHeaderCellDef>Category</th>
     <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryID }}</td>
   </ng-container>
   <ng-container matColumnDef="SubCategory">
-    <th mat-header-cell *matHeaderCellDef> SubCategory </th>
+    <th mat-header-cell *matHeaderCellDef>SubCategory</th>
     <td mat-cell *matCellDef="let product">{{ product.subCategory.subcategoryName }}</td>
   </ng-container>
   <ng-container matColumnDef="Created">
-    <th mat-header-cell *matHeaderCellDef> Created </th>
-    <td mat-cell *matCellDef="let product">{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
+    <th mat-header-cell *matHeaderCellDef>Created</th>
+    <td mat-cell *matCellDef="let product">{{ product.dateCreated | date:'d/M/y, h:mm' }}</td>
   </ng-container>
   <ng-container matColumnDef="Updated">
-    <th mat-header-cell *matHeaderCellDef> Updated </th>
-    <td mat-cell *matCellDef="let product">{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
+    <th mat-header-cell *matHeaderCellDef>Updated</th>
+    <td mat-cell *matCellDef="let product">{{ product.dateUpdated | date:'d/M/y, h:mm' }}</td>
   </ng-container>
   <ng-container matColumnDef="Version">
-    <th mat-header-cell *matHeaderCellDef> Version </th>
+    <th mat-header-cell *matHeaderCellDef>Version</th>
     <td mat-cell *matCellDef="let product">{{ product.version }}</td>
   </ng-container>
   <ng-container matColumnDef="Editedby">
-    <th mat-header-cell *matHeaderCellDef> User </th>
+    <th mat-header-cell *matHeaderCellDef>User</th>
     <td mat-cell *matCellDef="let product">{{ product.editedBy }}</td>
   </ng-container>
   <ng-container matColumnDef="Published">
-    <th mat-header-cell *matHeaderCellDef> Published </th>
+    <th mat-header-cell *matHeaderCellDef>Published</th>
     <div [formGroup]="angForm" novalidate>
       <td mat-cell *matCellDef="let product">
-        <mat-checkbox class="example-margin" formControlName="publishedStatus" #publishedStatus (click)="editProduct(product.productID,publishedStatus.value)" ></mat-checkbox>
+        <mat-checkbox formControlName="publishedStatus" #publishedStatus (click)="editProduct(product.productID)" (click)="updateProduct(publishedStatus.value)" ></mat-checkbox>
         {{ product.publishedStatus }}
       </td>
     </div>
-
   </ng-container>
   <ng-container matColumnDef="Edit">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>Edit</th>
     <td mat-cell *matCellDef="let product"><button mat-raised-button color="primary" [routerLink]="['/product/edit', product.productID]"><i class="fa fa-edit"></i></button></td>
   </ng-container>
   <ng-container matColumnDef="Delete">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>Delete</th>
     <td mat-cell *matCellDef="let product"><button mat-raised-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
-
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
 </table>
-<!--<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Category</th>
-      <th>SubCategory</th>
-      <th>DateCreated</th>
-      <th>DateUpdated</th>
-      <th>Version</th>
-      <th>EditedBy</th>
-      <th>Published</th>
-      <th colspan="2">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let product of products">
-      <td>{{ product.productID }}</td>
-      <td>{{ product.productName }}</td>
-      <td>{{ product.subCategory.categoryName }}</td>
-      <td>{{ product.subCategory.subcategoryName }}</td>
-      <td>{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
-      <td>{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
-      <td>{{ product.version }}</td>
-      <td>{{ product.editedBy }}</td>
-      <td>{{ product.publishedStatus }}</td>
-      <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-warning"><i class="fa fa-edit"></i></a></td>
-      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
-    </tr>
-  </tbody>
-</table>-->
-
