--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -1,30 +1,19 @@
-<div class='container-fluid' id="main_container">
+<div class='container' id="main_container">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-6">
+
+        <span id="title_home">KingPim</span>&nbsp;&nbsp;&nbsp;by <a href="#" id="curse_come" style="font-style:italic;">Royalty Systems</a><br>
+        <p>
+          These are the voyages of the Starship Enterprise. Its continuing mission, to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no one has gone before.
+        </p>
+        <p>
+          Resistance is futile. --<span style="font-style: italic">management</span>
+        </p>
+        <mat-divider></mat-divider><br>
     </div>
-    <div class="col-md-8">
-      <h1>KingPim</h1>
-      <p>
-        These are the voyages of the Starship Enterprise. Its continuing mission, to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no one has gone before. We need to neutralize the homing signal. Each unit has total environmental control, gravity, temperature, atmosphere, light, in a protective field. Sensors show energy readings in your area. We had a forced chamber explosion in the resonator coil. Field strength has increased by 3,000 percent.
-      </p>
+    <div class="col-md-6">
+        <img src="../../assets/img/pim-system.png" alt="pim">
 
-      <p>
-        Run a manual sweep of anomalous airborne or electromagnetic readings. Radiation levels in our atmosphere have increased by 3,000 percent. Electromagnetic and subspace wave fronts approaching synchronization. What is the strength of the ship's deflector shields at maximum output? The wormhole's size and short period would make this a local phenomenon. Do you have sufficient data to compile a holographic simulation?
-      </p>
-
-      <p>
-        Deflector power at maximum. Energy discharge in six seconds. Warp reactor core primary coolant failure. Fluctuate phaser resonance frequencies. Resistance is futile. Recommend we adjust shield harmonics to the upper EM band when proceeding. These appear to be some kind of power-wave-guide conduits which allow them to work collectively as they perform ship functions. Increase deflector modulation to upper frequency band.
-      </p>
-
-      <p>
-        Communication is not possible. The shuttle has no power. Using the gravitational pull of a star to slingshot back in time? We are going to Starbase Montgomery for Engineering consultations prompted by minor read-out anomalies. Probes have recorded unusual levels of geological activity in all five planetary systems. Assemble a team. Look at records of the Drema quadrant. Would these scans detect artificial transmissions as well as natural signals?
-      </p>
-
-      <p>
-        Resistance is futile.
-      </p>
-    </div>
-    <div class="col-md-2">
     </div>
   </div>
 </div>
