--- a/KingPim.Web/ClientApp/src/app/login/login.component.html
+++ b/KingPim.Web/ClientApp/src/app/login/login.component.html
@@ -1,13 +1,9 @@
 
 <div class="container">
-  <img src="../../assets/img/logo_king.png" /><span style="font-size:40px">KingPim</span>
   <div class="row">
-    
     <div class="Absolute-Center is-Responsive">
-
+        <span style="font-size:40px">KingPim</span>
       <div class="col-sm-12 col-md-10 col-md-offset-1">
-
-
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="username">Username</label>
