--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -6,11 +6,22 @@ body {
   background-color: white !important;
   font-family: 'Niramit', sans-serif !important;
 }
+table{
+  width: 100%;
+}
 a {
   cursor: pointer!important;
 }
 #main_container {
   margin-top: 50px;
+}
+#title_home{
+font-size: 4em;
+}
+#curse_home{
+font-size: 2em;
+font-style: italic;
+
 }
 .fullscreenDiv {
   background-color: #e8e8e8;
@@ -68,14 +79,17 @@ a {
   left: 0;
   bottom: 0;
   right: 0;
-}
 
+}
 .Absolute-Center.is-Responsive {
   width: 50%;
   height: 50%;
   min-width: 200px;
   max-width: 400px;
   padding: 40px;
+  background-image: url('../src/assets/img/logo_king.png');
+  background-repeat: no-repeat;
+  background-position: center;
 
 }
 custom-modalbox {
